fixed a few visuals

--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ span.navbar-text {
   width: 42px;
   height: 42px;
   position: absolute;
-  background-color: #000000;
+  background-color: #fefefe;
   border-radius: 50%;
   transform: scale(0);
   transition: 0.3s ease-in-out;
@@ -165,7 +165,7 @@ span.navbar-text {
 .navbar-text button {
   font-weight: 700;
   color: #000000;
-  border: 1px solid #000000;
+  border: 1px solid #9c9b9b;
   padding: 18px 34px;
   font-size: 18px;
   margin-left: 18px;
@@ -181,7 +181,7 @@ span.navbar-text {
   width: 0%;
   height: 100%;
   position: absolute;
-  background-color: #000000;
+  background-color: rgb(240, 158, 185);
   left: 0;
   top: 0;
   z-index: -1;
@@ -218,7 +218,7 @@ nav.navbar .navbar-toggler-icon:before {
   width: 24px;
   position: absolute;
   height: 2px;
-  background-color: #000000;
+  background-color: #ffffff;
   top: 0;
   left: 0;
   content: "";
@@ -347,6 +347,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .skill-slider .item img {
   width: 50%;
   margin: 0 auto 15px auto;
+}
+.item h5 {
+  color: rgb(255, 255, 255); /* Set the desired color for the text */
 }
 .background-image-left {
   top: 28%;
@@ -484,14 +487,18 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .contact {
+  position: relative;
   background: white;
   text-align: left;
   justify-content: flex-start;
+  padding-bottom: 20px;
 }
 .contact img {
   width: 92%;
 }
 .contact h2 {
+  position: absolute;
+  top: 0; /* Position it at the top */
   font-size: 45px;
   font-weight: 700;
   margin-bottom: 30px;
@@ -499,10 +506,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .contact form input,
 .contact form textarea {
   width: 100%;
-  background: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.5);
   border-radius: 20px;
-  color: #000000;
+  color: #080808;
   margin: 0 0 8px 0;
   padding: 18px 26px;
   font-weight: 500;
@@ -512,14 +519,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact form input:focus,
 .contact form textarea:focus {
-  background: rgb(0, 0, 0);
-  color: #121212;
+  background: rgb(240, 158, 185);
+  color: #080808;
 }
 .contact form input::placeholder,
 .contact form textarea::placeholder {
   font-size: 16px;
   font-weight: 400;
-  color: #000000;
+  color: #ffffff;
 }
 .contact form input:focus::placeholder,
 .contact form textarea:focus::placeholder {
@@ -546,7 +553,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact form button::before {
   content: "";
-  background: #fff9f9;
+  background: rgb(240, 158, 185);
   width: 0;
   height: 100%;
   position: absolute;
@@ -561,12 +568,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding: 0 0 50px 0;
+  padding-top: 20px;
 
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: white;
+  background-color: #fafafa;
 }
 .newsletter-bx {
   background: #000000;
@@ -582,7 +589,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1.2em;
 }
 .new-email-bx {
-  background: #000000;
+  background: #ffffff;
   padding: 5px;
   border-radius: 20px;
   position: relative;
