--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,12 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  background-color: #121212 !important;
+  background-color: #fffefe !important;
   color: #000000 !important;
   font-family: "Centra", sans-serif !important;
+
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 h1,
@@ -94,15 +97,25 @@ p.danger {
 }
 /************ Navbar Css ************/
 nav.navbar {
-  padding: 18px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 9999;
-  transition: 0.32s ease-in-out;
+  top: 3vh;
+  z-index: 999;
+  border-radius: 40px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
+.custom-navbar-container {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 380px;
+  height: 40px;
+}
+
 nav.navbar.scrolled {
-  padding: 0px 0;
   background-color: #fafafa;
 }
 nav.navbar a.navbar-brand {
@@ -180,7 +193,7 @@ span.navbar-text {
   content: "";
   width: 0%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   background-color: rgb(240, 158, 185);
   left: 0;
   top: 0;
@@ -206,7 +219,7 @@ nav.navbar .navbar-toggler-icon {
   height: 17px;
   background-image: none;
   position: relative;
-  border-bottom: 2px solid #000000;
+  border-bottom: 2px solid #040404;
   transition: all 300ms linear;
   top: -2px;
 }
@@ -216,13 +229,12 @@ nav.navbar .navbar-toggler-icon:focus {
 nav.navbar .navbar-toggler-icon:after,
 nav.navbar .navbar-toggler-icon:before {
   width: 24px;
-  position: absolute;
+  position: fixed;
   height: 2px;
   background-color: #ffffff;
-  top: 0;
-  left: 0;
+
   content: "";
-  z-index: 2;
+  z-index: 999;
   transition: all 300ms linear;
 }
 nav.navbar .navbar-toggler-icon:after {
@@ -230,7 +242,7 @@ nav.navbar .navbar-toggler-icon:after {
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
   transform: rotate(45deg);
-  background-color: #fdfdfd;
+  background-color: #817c7c;
   height: 2px;
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
@@ -245,7 +257,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
-  padding: 260px 0 100px 0;
+  padding: 150px 0 100px 0;
   background-color: white;
 }
 
@@ -316,7 +328,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Skills Css ************/
 .skill {
-  padding: 0 0 50px 0;
+  padding: 0 0 10px 0;
   position: relative;
   background-color: #fffcfc;
 }
@@ -361,7 +373,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .project {
-  padding: 80px 0;
+  padding: 10px 0;
   position: relative;
   background-color: rgb(255, 253, 253);
 }
@@ -387,7 +399,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   overflow: hidden;
 }
 .project .nav.nav-pills .nav-item {
-  width: 33.33333%;
 }
 .project .nav.nav-pills .nav-link {
   background-color: transparent;
@@ -488,34 +499,39 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Projects Css ************/
 .contact {
   position: relative;
-  background: white;
+  display: block;
+  background-color: rgba(239, 224, 243, 0.458);
   text-align: left;
   justify-content: flex-start;
-  padding-bottom: 20px;
+  padding: 20px;
+
+  padding: "10px";
+  border-radius: 20px;
 }
 .contact img {
-  width: 92%;
 }
 .contact h2 {
-  position: absolute;
   top: 0; /* Position it at the top */
   font-size: 45px;
   font-weight: 700;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
+  padding: "70px";
 }
 .contact form input,
 .contact form textarea {
   width: 100%;
   background: rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
+  border-radius: 5px;
   color: #080808;
-  margin: 0 0 8px 0;
+  margin: 0px 0px 6px 0px;
   padding: 18px 26px;
   font-weight: 500;
   font-size: 18px;
   letter-spacing: 0.8px;
   transition: 0.3s ease-in-out;
+
+  padding: 20px;
 }
 .contact form input:focus,
 .contact form textarea:focus {
@@ -540,9 +556,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 14px 48px;
   font-size: 18px;
   margin-top: 25px;
-  border-radius: 0;
+  border-radius: 5px;
   position: relative;
   transition: 0.3s ease-in-out;
+  padding: 10px;
 }
 .contact form button span {
   z-index: 1;
@@ -561,6 +578,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   left: 0;
   z-index: 0;
   transition: 0.3s ease-in-out;
+  border-radius: 5px;
 }
 .contact form button:hover::before {
   width: 100%;
@@ -568,12 +586,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding-top: 20px;
-
+  padding: 10px;
+  border: "4px solid black";
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #fafafa;
+  margin-top: 10px;
 }
 .newsletter-bx {
   background: #000000;
