fixing the contact form

--- a/src/App.css
+++ b/src/App.css
@@ -451,7 +451,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .proj-imgbx::before {
   content: "";
-  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
+  background: linear-gradient(90.21deg, #e0a9ca -5.91%, #a89cde 111.58%);
   opacity: 0.85;
   position: absolute;
   width: 100%;
@@ -599,8 +599,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-radius: 55px;
   color: #ffffff;
   padding: 85px 125px;
-  margin-bottom: 80px;
-  margin-top: -122px;
 }
 .newsletter-bx h3 {
   font-weight: 700;
