--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ ul {
   padding: 0;
   line-height: normal;
   text-decoration: none;
+  border-radius: 0;
 }
 
 a:hover {
@@ -71,8 +72,18 @@ img {
 }
 
 button {
-  border: 0;
   background-color: transparent;
+  padding: 10px !important;
+  border-radius: 10px !important;
+}
+button.round-button {
+  background-color: transparent;
+  padding: 10px !important;
+  border-radius: 10px !important;
+}
+
+button.round-button:hover {
+  background-color: pink;
 }
 
 input:focus,
@@ -137,44 +148,7 @@ span.navbar-text {
   display: flex;
   align-items: center;
 }
-.social-icon {
-  display: inline-block;
-  margin-left: 14px;
-}
-.social-icon a {
-  width: 42px;
-  height: 42px;
-  background: rgba(0, 0, 0, 0.1);
-  display: inline-flex;
-  border-radius: 50%;
-  margin-right: 6px;
-  align-items: center;
-  justify-content: center;
-  line-height: 1;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-}
-.social-icon a::before {
-  content: "";
-  width: 42px;
-  height: 42px;
-  position: absolute;
-  background-color: #fefefe;
-  border-radius: 50%;
-  transform: scale(0);
-  transition: 0.3s ease-in-out;
-}
-.social-icon a:hover::before {
-  transform: scale(1);
-}
-.social-icon a img {
-  width: 40%;
-  z-index: 1;
-  transition: 0.3s ease-in-out;
-}
-.social-icon a:hover img {
-  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%)
-    hue-rotate(346deg) brightness(95%) contrast(86%);
-}
+
 .navbar-text button {
   font-weight: 700;
   color: #000000;
@@ -238,7 +212,7 @@ nav.navbar .navbar-toggler-icon:before {
   transition: all 300ms linear;
 }
 nav.navbar .navbar-toggler-icon:after {
-  top: 8px;
+  padding: 10px;
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
   transform: rotate(45deg);
@@ -251,7 +225,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
   height: 2px;
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-  border-color: transparent;
+  border-color: black;
+  background-color: #a89cde;
 }
 
 /************ Banner Css ************/
