--- a/src/App.css
+++ b/src/App.css
@@ -74,12 +74,12 @@ img {
 button {
   background-color: transparent;
   padding: 10px !important;
-  border-radius: 10px !important;
+  border-radius: 5px !important;
 }
 button.round-button {
   background-color: transparent;
   padding: 10px !important;
-  border-radius: 10px !important;
+  border-radius: 5px !important;
 }
 
 button.round-button:hover {
@@ -115,7 +115,9 @@ nav.navbar {
   top: 3vh;
   z-index: 999;
   border-radius: 40px;
+  padding: 10px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
 }
 .custom-navbar-container {
   margin: 0;
@@ -127,7 +129,8 @@ nav.navbar {
 }
 
 nav.navbar.scrolled {
-  background-color: #fafafa;
+  height: 50px;
+  background-color: #ffffff;
 }
 nav.navbar a.navbar-brand {
   width: 9%;
@@ -152,12 +155,12 @@ span.navbar-text {
 .navbar-text button {
   font-weight: 700;
   color: #000000;
-  border: 1px solid #9c9b9b;
+  border: 1px;
   padding: 18px 34px;
   font-size: 18px;
   margin-left: 18px;
   position: relative;
-  background-color: transparent;
+  background-color: pink;
   transition: 0.3s ease-in-out;
 }
 .navbar-text button span {
@@ -181,7 +184,6 @@ span.navbar-text {
   content: "";
   width: 100%;
   height: 100%;
-  position: absolute;
 }
 nav.navbar .navbar-toggler:active,
 nav.navbar .navbar-toggler:focus {
@@ -195,17 +197,15 @@ nav.navbar .navbar-toggler-icon {
   position: relative;
   border-bottom: 2px solid #040404;
   transition: all 300ms linear;
-  top: -2px;
 }
 nav.navbar .navbar-toggler-icon:focus {
-  border-bottom: 2px solid #000000;
+  border-bottom: 2px solid #484747;
 }
 nav.navbar .navbar-toggler-icon:after,
 nav.navbar .navbar-toggler-icon:before {
   width: 24px;
   position: fixed;
   height: 2px;
-  background-color: #ffffff;
 
   content: "";
   z-index: 999;
@@ -216,7 +216,7 @@ nav.navbar .navbar-toggler-icon:after {
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
   transform: rotate(45deg);
-  background-color: #817c7c;
+  background-color: #fef6f6;
   height: 2px;
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
@@ -227,6 +227,30 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-color: black;
   background-color: #a89cde;
+}
+
+.custom-toggler {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+@media (max-width: 768px) {
+  .custom-toggler {
+    top: 10px;
+    right: 10px;
+  }
+}
+
+.navbar-expand-md .navbar-toggler:active ~ .custom-collapse {
+  left: 0;
+  background-color: #f8f8f8;
+}
+.custom-collapse {
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  padding: 3px;
+  margin: 3px;
 }
 
 /************ Banner Css ************/
@@ -561,13 +585,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding: 10px;
   border: "4px solid black";
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #fafafa;
-  margin-top: 10px;
+  margin: 3px;
+  border-radius: 10px;
 }
 .newsletter-bx {
   background: #000000;
